--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
     font-size: 27px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
 body{
     background: linear-gradient(to right, rgb(48, 48, 233, 80%), rgb(115, 200, 228));
     display: flex;
@@ -15,7 +14,6 @@ body{
     min-height: 100vh;
     overflow: hidden;
 }
-
 .clock{
     width: 400px;
     height: 400px;
@@ -25,7 +23,6 @@ body{
     box-shadow: 0px 0px 2px 2px rgba(243, 238, 238, 0.9);
     position: relative;
 }
-
 .clock .number{
    --rotation : 0;
     position: absolute;
@@ -36,7 +33,6 @@ body{
     transform: rotate(var(--rotation));
     padding: 5px;
 } 
-
 .clock .number1 { --rotation: 30deg;}
 .clock .number2 { --rotation: 60deg; }
 .clock .number3 { --rotation: 90deg; }
@@ -48,7 +44,6 @@ body{
 .clock .number9 { --rotation: 270deg; }
 .clock .number10 { --rotation: 300deg; }
 .clock .number11 { --rotation: 330deg; }
-
 .clock .center{
     position: absolute;
     background-color: black;
@@ -57,10 +52,9 @@ body{
     top: 48%;
     left: 50%;
     transform: translateX(-49%);
-    z-index: 11;
+    z-index: 6;
     border-radius: 50%;
 }
-
 .clock .hand{
     --rotation: 0;
     position: absolute;
@@ -70,11 +64,10 @@ body{
     border-top-right-radius : 10px;
     background-color : rgb(18, 18, 34);
     transform-origin: bottom;
-    z-index: 10;
+    z-index: 5;
     transform: translateX(-46%) rotate(calc(var(--rotation)*1deg)) ;
 
 }
-
 .clock .hand.second{
     width: 3px;
     height: 45%;
@@ -89,4 +82,16 @@ body{
     width: 10px;
     height: 37%;
     background-color: rgba(28, 26, 39, 0.425);
+}
+span{
+    font-size: 14px;
+    font-weight: bolder;
+    position: absolute;
+    margin-top: -13px;
+    margin-left: 5px;
+    word-spacing: 20px
+}
+
+.number10 >span, .number11 > span, .number12 > span {
+    margin-left: 13px; 
 }
